[gd_scene load_steps=6 format=3 uid="uid://eu0hw0cd0bbp"]

[ext_resource type="Script" path="res://game/shared/attacks/slam/slam_attack.gd" id="1_ubagr"]
[ext_resource type="Shader" path="res://common/materials/arc.gdshader" id="2_db3ya"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8yywl"]
shader = ExtResource("2_db3ya")
shader_parameter/cone_angle = 1.5708
shader_parameter/opacity = 1.0
shader_parameter/speed = 2.0
shader_parameter/flash = false
shader_parameter/cutoff_distance = 0.151

[sub_resource type="Gradient" id="Gradient_1fvue"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ae4dv"]
gradient = SubResource("Gradient_1fvue")
width = 100
height = 100

[node name="SlamAttack" type="Area2D"]
collision_layer = 0
script = ExtResource("1_ubagr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_8yywl")
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_ae4dv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(0, 0, 70.7107, -70.7107, 81.9152, -57.3576, 90.6308, -42.2618, 96.5926, -25.8819, 99.6195, -8.71557, 99.6195, 8.71557, 96.5926, 25.8819, 90.6308, 42.2618, 81.9152, 57.3576, 70.7107, 70.7107)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(100, 0)

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
